Fix language change and reveal letter stuck

--- a/src/infrastructure/ihm/page/home/home.component.css
+++ b/src/infrastructure/ihm/page/home/home.component.css
@@ -32,3 +32,12 @@ p-dropdown {
     justify-content: center;
     align-items: center;
 }
+
+.language-cell {
+    display: flex;
+    flex-direction: row;
+}
+
+.isocode {
+    margin-left: 1rem;
+}
